# foodscrape

./: .gitignore  app.py  dev.db  main.py  mypy.ini  pyproject.toml  q
.circleci/: config.yml
foodscrape/: app.py  commands.py  common.py  config.py  database.py  exceptions.py  export.py  fetch.py  ingredient.py  logger.py  recipe.py  scrape.py  sitemap.py
foodscrape/ingredient/: models.py  serializers.py  service.py  views.py
foodscrape/models/: ingredient.py
foodscrape/recipe/: models.py  serializers.py  service.py  util.py  views.py
foodscrape/scrape/: exceptions.py  models.py  serializers.py  service.py  trie.py  util.py  views.py
foodscrape/sitemap/: models.py  serializers.py  service.py  views.py
migrations/versions/: 937fecd82ec9_.py  bb30d50c4588_.py
models/: ingredient_model.pkl
tests/: conftest.py  fixtures.py  test_config.py  test_fetch.py  test_foodscrape.py
tests/scrape/: test_models.py  test_service.py
