[tool.poetry]
name = "foodscrape"
version = "0.1.0"
description = ""
authors = ["Harrison Ayan <harrisonayan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
lxml = "^4.8.0"
spacy = "^3.2.4"
requests = "^2.27.1"
pandas = "^1.4.2"
psycopg2 = "^2.9.3"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"

[tool.poetry.dependencies.en_core_web_lg]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.2.0/en_core_web_lg-3.2.0.tar.gz"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.13.3"
types-requests = "^2.27.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
