[tool.poetry]
name = "foodscrape"
version = "0.1.0"
description = ""
authors = ["Harrison Ayan <harrisonayan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
lxml = "^4.8.0"
requests = "^2.27.1"
psycopg2 = "^2.9.3"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
Flask = "^2.1.1"
Flask-Testing = "^0.8.1"
marshmallow = "^3.15.0"
flask-apispec = "^0.11.1"
spacy = "^3.2.4"
pandas = "^1.4.2"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
responses = "^0.20.0"

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0.tar.gz"

[tool.isort]
profile = "black" 

[tool.black]
line-length = 79


[tool.poetry.dev-dependencies]
pylint = "^2.13.3"
types-requests = "^2.27.15"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
